<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_1"
    tools:context=".activity.AddUpdateActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:backgroundTint="@color/black_1"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btnClose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/black_1"
                    android:src="@drawable/ic_baseline_close_24" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:text="@string/add_new_card"
                    android:textColor="@color/color6"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:background="@color/black_1"
                    android:src="@drawable/ic_baseline_qr_code_scanner_24" />

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="14dp"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.2"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardBackgroundColor="@color/color8"
                android:id="@+id/cardView"
                app:cardCornerRadius="14dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textCardName"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/card"
                            android:textColor="@color/white"
                            android:textSize="20sp" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_baseline_more_horiz_24" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/textCardNumbers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:textColor="@color/white"
                            android:textSize="25sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="bottom"
                        android:layout_weight="1"
                        android:gravity="bottom"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/card_holder"
                            android:textColor="@color/whi" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/expires"
                            android:textColor="@color/white" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/textCardHolderName"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:textColor="@color/white"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/textDate1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textColor="@color/white"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/textDate2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textColor="@color/white"
                            android:textSize="20sp" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="20dp"
            android:layout_weight="2.2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/your_c"
                    android:textColor="@color/color7"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editCardNumbers"
                    android:layout_width="match_parent"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:inputType="number"
                    android:maxLength="16"
                    android:background="@drawable/edit_bg"
                    android:hint="@string/number"
                    android:padding="12dp"
                    android:textColorHint="@color/color7" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/expiration_date"
                        android:textColor="@color/color7"
                        android:textSize="17sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/cvv"
                        android:textColor="@color/color7"
                        android:textSize="17sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/editDate1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        android:maxLength="2"
                        android:textColor="@color/white"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/edit_bg"
                        android:hint="08"
                        android:inputType="number"
                        android:padding="12dp"
                        android:textColorHint="@color/color7" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/editDate2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginTop="10dp"
                        android:maxLength="2"
                        android:layout_weight="1"
                        android:background="@drawable/edit_bg"
                        android:hint="21"
                        android:inputType="number"
                        android:padding="12dp"
                        android:textColorHint="@color/color7" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/editCvv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:maxLength="3"
                        android:background="@drawable/edit_bg"
                        android:hint="458"
                        android:inputType="number"
                        android:padding="12dp"
                        android:textColorHint="@color/color7" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_holder_name"
                    android:textColor="@color/color7"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editHolderName"
                    android:singleLine="true"
                    android:maxLength="25"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_bg"
                    android:textColor="@color/white"
                    android:hint="@string/math"
                    android:inputType="text"
                    android:padding="12dp"
                    android:textColorHint="@color/color7" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAddNewCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                android:backgroundTint="@color/color8"
                android:padding="18dp"
                android:text="@string/add_new"
                app:cornerRadius="12dp" />

        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>